Fixed unaligned title.
I don't know what that style was for but I do know it broke the alignment of the main title.

--- a/frontporch14/resources/theme.css
+++ b/frontporch14/resources/theme.css
@@ -46,9 +46,6 @@ a:focus {
   width: 1280px;
   height: 720px;
 }
-.deck-container > .slide {
-  padding: 20px 115px;
-}
 .slide {
   width: 100%;
 }
